--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "color": "^1.0.3",
     "compression": "^1.4.0",
     "copy-webpack-plugin": "^4.0.0",
+    "cross-spawn": "^4.0.2",
     "css-loader": "^0.27.1",
     "del": "^2.1.0",
     "eslint": "^3.17.1",
@@ -83,7 +84,9 @@
     "localforage": "^1.4.3",
     "make-error": "^1.0.4",
     "nconf": "^0.8.1",
+    "node-env-file": "^0.1.8",
     "nodemon": "^1.8.1",
+    "postcss-flexbugs-fixes": "^2.0.0",
     "postcss-loader": "^1.1.0",
     "prettier": "^0.22.0",
     "ramda": "^0.23.0",
